[project]
name = "async_gpib"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python3 AsyncIO Linux GPIB wrapper"
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
]
keywords = ["linux-gpib", "GPIB", "API"]
dynamic = ["version"]
dependencies = [
    "typing-extensions; python_version <'3.11'",
    "gpib-ctypes ~= 0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/pyAsyncGpib"
"Bug Tracker" = "https://github.com/PatrickBaus/pyAsyncGpib/issues"
"Download" = "https://github.com/PatrickBaus/pyAsyncGpib/releases"

[project.optional-dependencies]
dev = [
    "black", "build", "isort", "mypy", "pre-commit", "pylint", "pytest", "twine",
]

test = [
    "mypy", "pylint", "pytest",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "typing-extensions; python_version <'3.11'",
    "gpib-ctypes"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "async_gpib.__version__"}
